frontend/test/should_pass/nodeedgebyunique.grg
rule rn : (Node)
{
	-e:Edge->;
	if { nodeByUnique(0)==source(e); }
	if { uniqueof(nodeByUnique(0))==0; }
	
	modify {
	---
		def n:Node;
		eval {
			yield n = nodeByUnique(42);
		}
		return(nodeByUnique(0));
		exec ( { yield n = nodeByUnique(uniqueof(nodeByUnique(42))) } );
	}
}

rule re : (Edge)
{
	-e:Edge->;
	if { edgeByUnique(0)==e; }
	if { uniqueof(edgeByUnique(0))==0; }
	
	modify {
	---
		def -n:Edge->;
		eval {
			yield n = (Edge)edgeByUnique(42);
		}
		return((Edge)edgeByUnique(0));
		exec ( { yield n = (Edge)edgeByUnique(uniqueof(edgeByUnique(42))) } );
	}
}

