frontend/test/should_fail/computations_decl_use_returns_type_mismatch_002.grg
using model_init;

function func(-e:Edge->) : E1
{
	return(e);
}

